# tail_hedge_simulation

./: .env.template  .gitignore  README.md  pyproject.toml
.github/: DEVELOPMENT_PLAN.md
.github/copilot_sessions/: summary.md
assets/: background_info.md
debug_analyze/: analyze_1999_leap_performance.py  analyze_budget_vs_costs_1999_2004.py  analyze_timing_comparison.py  analyze_volatility_caps.py  investigate_leap_profits.py  investigate_leap_profits_credible.py  simple_leap_analysis.py  verify_1997.py  volatility_adjusted_budgeting.py
examples/: asymmetric_volatility_research.py  calculate_1997_option_costs.py  complete_strategy_example.py  long_term_hedge_simulation.py  real_world_leap_hedge_2007.py  stock_dividend_scraping.py  validate_assumptions.py
src/: asymmetric_options.py  asymmetric_sim.py  behavioral_utility.py  hedge_overlay.py  optimizer.py  risk_premia.py  systematic_hedging.py
tools/: pdf_reformatter.py
